<resources>
    <string name="app_name">MyResources</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Resources</string>
    <string name="nav_header_subtitle">gregorylureau@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bool">Booleans</string>
    <string name="menu_color">Colors</string>
    <string name="menu_drawable">Drawables</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
