<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_drawable">

    <fragment
        android:id="@+id/nav_bool"
        android:name="com.glureau.myresources.ui.bool.BoolFragment"
        android:label="@string/menu_bool"
        tools:layout="@layout/myr_fragment_bool" />

    <fragment
        android:id="@+id/nav_color"
        android:name="com.glureau.myresources.ui.color.ColorFragment"
        android:label="@string/menu_color"
        tools:layout="@layout/myr_fragment_color" />

    <fragment
        android:id="@+id/nav_drawable"
        android:name="com.glureau.myresources.ui.drawable.DrawableFragment"
        android:label="@string/menu_drawable"
        tools:layout="@layout/myr_fragment_drawable" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.glureau.myresources.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/myr_fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.glureau.myresources.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/myr_fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.glureau.myresources.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/myr_fragment_send" />
</navigation>